<resources>
    <string name="app_name">Sound Sleep</string>
    <string name="start_time">Start Time</string>
    <string name="start_time_default">--:-- PM</string>
    <string name="end_time_default">--:-- AM</string>
    <string name="select_time">Select Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_time">End Time</string>
    <string name="select_mode">Select Mode</string>
    <string name="silent_mode">Silent</string>
    <string name="vibrate_mode">Vibrate</string>
    <string name="notifications">Notifications</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="channel_name">Sound Sleep</string>
    <string name="channel_description">Sound Sleep Description</string>
    <string name="channel_id">primary_notification_channel_A</string>
    <string name="notification_title">Sound Sleep</string>
    <string name="notification_text_vibrate">Changed the profile to vibrate mode</string>
    <string name="notification_text_silent">Changed the profile to silent mode</string>
    <string name="notification_text_normal">Changed the profile to normal mode</string>
    <string name="notification_big_text_silent">Changed the Ring profile of the device to silent mode</string>
    <string name="notification_big_text_vibrate">Changed the Ring profile of the device to vibrate mode</string>
    <string name="notification_big_text_normal">Changed the Ring profile of the device to normal mode</string>

</resources>