<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context="com.bkprojects.soundsleep.MainActivity">

    <TextView
        android:id="@+id/select_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/select_mode"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_time_label" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/end_time"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label" />

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/start_time"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/start_time_default"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/start_time_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/end_time_default"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/end_time_label"
        app:layout_constraintTop_toBottomOf="@+id/start_time_value" />

    <Button
        android:id="@+id/select_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:fontFamily="sans-serif-medium"
        android:onClick="setTime"
        android:text="@string/select_time"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_time_value"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/select_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:fontFamily="sans-serif-medium"
        android:onClick="setTime"
        android:text="@string/select_time"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/end_time_value"
        app:layout_constraintTop_toBottomOf="@+id/select_start_time"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/mode_select_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/select_mode_label"
        app:layout_constraintStart_toEndOf="@+id/select_mode_label"
        app:layout_constraintTop_toBottomOf="@+id/select_end_time" />

</androidx.constraintlayout.widget.ConstraintLayout>